[gd_scene load_steps=3 format=3 uid="uid://bl4dqnsdbfw54"]

[ext_resource type="Script" uid="uid://uhg7tvxeryyd" path="res://ca3 framework/2D Battle/GUI/Battle/gui.gd" id="1_hrvj7"]
[ext_resource type="PackedScene" uid="uid://d4nartw2fxrpi" path="res://data/default/gui/battle/gui.tscn" id="2_q562i"]

[node name="GUI" type="Node2D"]
script = ExtResource("1_hrvj7")

[node name="GUI" parent="." instance=ExtResource("2_q562i")]

[node name="HP" parent="GUI/CanvasLayer" index="0"]
offset_left = 136.0
offset_top = 109.0
offset_right = 420.0
offset_bottom = 146.0

[node name="HeroeName" parent="GUI/CanvasLayer" index="1"]
offset_left = 137.0
offset_top = 156.0
offset_right = 321.0
offset_bottom = 198.0

[node name="EnemiesSize" parent="GUI/CanvasLayer" index="2"]
offset_left = 882.0
offset_top = 450.0
offset_right = 939.0
offset_bottom = 519.0

[node name="Mana" parent="GUI/CanvasLayer" index="3"]
offset_left = 113.0
offset_top = 536.0
offset_right = 315.0
offset_bottom = 571.0

[node name="EnemiesSizeLabel" parent="GUI/CanvasLayer" index="4"]
offset_left = 869.0
offset_top = 527.0
offset_right = 1055.0
offset_bottom = 569.0

[node name="TimeLeft" parent="GUI/CanvasLayer" index="5"]
offset_left = 810.0
offset_top = 107.0
offset_right = 1048.0
offset_bottom = 134.0

[node name="Label" parent="GUI/CanvasLayer" index="6"]
offset_left = 822.0
offset_top = 147.0
offset_right = 899.0
offset_bottom = 170.0

[node name="Label2" parent="GUI/CanvasLayer" index="7"]
offset_left = 116.0
offset_top = 230.0
offset_right = 214.0
offset_bottom = 266.0

[node name="Combo" parent="GUI/CanvasLayer" index="8"]
offset_left = 262.0
offset_top = 228.0
offset_right = 360.0
offset_bottom = 264.0

[node name="Label3" parent="GUI/CanvasLayer" index="9"]
offset_left = 118.0
offset_top = 264.0
offset_right = 242.0
offset_bottom = 300.0

[node name="MaxCombo" parent="GUI/CanvasLayer" index="10"]
offset_left = 262.0
offset_top = 266.0
offset_right = 360.0
offset_bottom = 302.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="GUI"]
